# FastAPI-examples

./: .gitignore  README.md  WARP.md  pyproject.toml
.run/: FastAPI-pagination.run.xml  redis-in-fastapi.run.xml
Celery in FastAPI/: celery_main.py  send-email.http
Exceptions In FastAPI/: exception_handlers.py  main.py  test_exceptions.py  user_exceptions.py
FastAPI GUI/: app.py  index.html
FastAPI multitenant/: main.py  test_multitenant.http
FastAPI_htmx/: fastapi_htmx_example.py  test_form.html
Fastapi Background Tasks/: main.py  test_upload.http
Fastapi Documentation/: main.py
Fastapi Metadata Configuration/: README.md  main.py
Fastapi Rate Limiting/: README.md  main.py  test_rate_limit_redis.http  test_rate_limiting.http
Fastapi Threads/: README.md  async_threads.py  background_task_results.py  benchmark.py
Fastapi batching/: main.py  test_app.http
Fastapi with Middleware/: README.md  main.py  test_app.http
HTTP3/: README.md  main.py
Implementing PG bounce in FastAPI/: .env.example  database.py  generate_users.py  main.py  requirements.txt  test_gets.http
JWT Authentication In FastAPI/: main.py  post1.http  schemas.py
Killswich in FastAPI/: README.md  killswitch.http  killswitch.py  main.py  service.py
PGbouncer in FastAPI/: apache_bench_test_workload.py  database.py  generate_users.py  main.py  models.py  monitor.py  test_gets.http
Pagination with FastAPI/: database.py  main.py  post_pagination.http
Profiling In FastAPI/: main.py
Prometheus/: prometheus.py
Pydantic2/: README.md  main.py  pydantic2.http
Redis in FastAPI/: post11.http
SSE in FastAPI Application/: main.py
Slow-Polling FastAPI/: README.md
Timeout And Gate/: README.md  get_slow_router.py  main.py
Websocket in Fastapi/: main.py
middleware/: README.md  (+16 more)
(+2 files in other folders)
