[project]
name = "fastapi-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.5.3",
    "psycopg2-binary>=2.9.10",
    "fastapi>=0.95.2",
    "uvicorn[standard]>=0.22.0",
    "slowapi>=0.1.9",
]
[project.optional-dependencies]
test = ["pytest"]
dev = [
    "pytest",
    "ruff>=0.9.10",
    "black",
    "mypy",
    "trio",
    "pytest-mock",
    "httpx",
    "pytest-asyncio",
    "radon>=6.0.1",
]

[tool.uv.workspace]
members = [
    "FastAPI-static",
]
